first time try out with grid system

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,5 +7,9 @@ html(lang="en")
     title Github Pages
     link(rel="stylesheet", href="./dist/css/app.css")
   body
-    .container.p-y-3
-      h1 Hello Github Pages
+    .container-fluid
+      .row
+        .col-md-4(style="background:#eee;height:200px;")
+        .col-md-4(style="background:#000;height:200px;")
+        .col-md-4(style="background:#eee;height:200px;")
+        
