Try to add ie polyfill

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,10 +7,10 @@ html(lang="en")
     title Github Pages
     link(rel="stylesheet", href="./dist/css/app.css")
     //- if IE
-    //-   link(href='/css/bootstrap-ie9.css', rel='stylesheet')
+    //-   link(href='./dist/css/bootstrap-ie9.css', rel='stylesheet')
     //-   script(src='https://cdn.jsdelivr.net/g/html5shiv@3.7.3')
     //- if lt IE 9
-    //-   link(href='/css/bootstrap-ie8.css', rel='stylesheet')
+    //-   link(href='./dist/bootstrap-ie8.css', rel='stylesheet')
   body
     .container-fluid
       .row
