--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,14 +6,13 @@ html(lang="en")
     meta(http-equiv="x-ua-compatible", content="ie=edge")
     title Github Pages
     link(rel="stylesheet", href="./dist/css/app.css")
-    //
-      [if IE]
-      <link href="./dist/css/bootstrap-ie9.css" rel="stylesheet">
-      <script src="https://cdn.jsdelivr.net/g/html5shiv@3.7.3"></script>
-      [endif]
-      [if lt IE 9]
-      <link href="./dist/css/bootstrap-ie8.css" rel="stylesheet">
-      [endif]
+    <!--[if IE]>
+    <link href="./dist/css/bootstrap-ie9.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/g/html5shiv@3.7.3"></script>
+    <![endif]-->
+    <!--[if lt IE 9]>
+    <link href="./dist/css/bootstrap-ie8.css" rel="stylesheet">
+    <![endif]-->
   body
     .container-fluid
       .row
