--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,6 +6,7 @@ html(lang="en")
     meta(http-equiv="x-ua-compatible", content="ie=edge")
     title Github Pages
     link(rel="stylesheet", href="./dist/css/app.css")
+    link(rel='stylesheet', href='./dist/css/dashboard.css')
     <!--[if IE]>
     <link href="./dist/css/bootstrap-ie9.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/g/html5shiv@3.7.3"></script>
@@ -14,9 +15,185 @@ html(lang="en")
     <link href="./dist/css/bootstrap-ie8.css" rel="stylesheet">
     <![endif]-->
   body
+    nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
+      a.navbar-brand(href='#') Dashboard
+      button.navbar-toggler.d-lg-none(type='button', data-toggle='collapse', data-target='#navbarsExampleDefault', aria-controls='navbarsExampleDefault', aria-expanded='false', aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+      #navbarsExampleDefault.collapse.navbar-collapse
+        ul.navbar-nav.mr-auto
+          li.nav-item.active
+            a.nav-link(href='#')
+              | Home 
+              span.sr-only (current)
+          li.nav-item
+            a.nav-link(href='#') Settings
+          li.nav-item
+            a.nav-link(href='#') Profile
+          li.nav-item
+            a.nav-link(href='#') Help
+        form.form-inline.mt-2.mt-md-0
+          input.form-control.mr-sm-2(type='text', placeholder='Search', aria-label='Search')
+          button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
     .container-fluid
       .row
-        .col-md-4(style="background:#eee;height:200px;")
-        .col-md-4(style="background:#000;height:200px;")
-        .col-md-4(style="background:#eee;height:200px;")
-        
+        nav.col-sm-3.col-md-2.d-none.d-sm-block.bg-light.sidebar
+          ul.nav.nav-pills.flex-column
+            li.nav-item
+              a.nav-link.active(href='#')
+                | Overview 
+                span.sr-only (current)
+            li.nav-item
+              a.nav-link(href='#') Reports
+            li.nav-item
+              a.nav-link(href='#') Analytics
+            li.nav-item
+              a.nav-link(href='#') Export
+          ul.nav.nav-pills.flex-column
+            li.nav-item
+              a.nav-link(href='#') Nav item
+            li.nav-item
+              a.nav-link(href='#') Nav item again
+            li.nav-item
+              a.nav-link(href='#') One more nav
+            li.nav-item
+              a.nav-link(href='#') Another nav item
+          ul.nav.nav-pills.flex-column
+            li.nav-item
+              a.nav-link(href='#') Nav item again
+            li.nav-item
+              a.nav-link(href='#') One more nav
+            li.nav-item
+              a.nav-link(href='#') Another nav item
+        main.col-sm-9.ml-sm-auto.col-md-10.pt-3(role='main')
+          h1 Dashboard
+          section.row.text-center.placeholders
+            .col-6.col-sm-3.placeholder
+              img.img-fluid.rounded-circle(src='data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=', width='200', height='200', alt='Generic placeholder thumbnail')
+              h4 Label
+              .text-muted Something else
+            .col-6.col-sm-3.placeholder
+              img.img-fluid.rounded-circle(src='data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=', width='200', height='200', alt='Generic placeholder thumbnail')
+              h4 Label
+              span.text-muted Something else
+            .col-6.col-sm-3.placeholder
+              img.img-fluid.rounded-circle(src='data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=', width='200', height='200', alt='Generic placeholder thumbnail')
+              h4 Label
+              span.text-muted Something else
+            .col-6.col-sm-3.placeholder
+              img.img-fluid.rounded-circle(src='data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=', width='200', height='200', alt='Generic placeholder thumbnail')
+              h4 Label
+              span.text-muted Something else
+          h2 Section title
+          .table-responsive
+            table.table.table-striped
+              thead
+                tr
+                  th #
+                  th Header
+                  th Header
+                  th Header
+                  th Header
+              tbody
+                tr
+                  td 1,001
+                  td Lorem
+                  td ipsum
+                  td dolor
+                  td sit
+                tr
+                  td 1,002
+                  td amet
+                  td consectetur
+                  td adipiscing
+                  td elit
+                tr
+                  td 1,003
+                  td Integer
+                  td nec
+                  td odio
+                  td Praesent
+                tr
+                  td 1,003
+                  td libero
+                  td Sed
+                  td cursus
+                  td ante
+                tr
+                  td 1,004
+                  td dapibus
+                  td diam
+                  td Sed
+                  td nisi
+                tr
+                  td 1,005
+                  td Nulla
+                  td quis
+                  td sem
+                  td at
+                tr
+                  td 1,006
+                  td nibh
+                  td elementum
+                  td imperdiet
+                  td Duis
+                tr
+                  td 1,007
+                  td sagittis
+                  td ipsum
+                  td Praesent
+                  td mauris
+                tr
+                  td 1,008
+                  td Fusce
+                  td nec
+                  td tellus
+                  td sed
+                tr
+                  td 1,009
+                  td augue
+                  td semper
+                  td porta
+                  td Mauris
+                tr
+                  td 1,010
+                  td massa
+                  td Vestibulum
+                  td lacinia
+                  td arcu
+                tr
+                  td 1,011
+                  td eget
+                  td nulla
+                  td Class
+                  td aptent
+                tr
+                  td 1,012
+                  td taciti
+                  td sociosqu
+                  td ad
+                  td litora
+                tr
+                  td 1,013
+                  td torquent
+                  td per
+                  td conubia
+                  td nostra
+                tr
+                  td 1,014
+                  td per
+                  td inceptos
+                  td himenaeos
+                  td Curabitur
+                tr
+                  td 1,015
+                  td sodales
+                  td ligula
+                  td in
+                  td libero
+    //
+      Bootstrap core JavaScript
+      ==================================================
+    // Placed at the end of the document so the pages load faster
+    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js', integrity='sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1', crossorigin='anonymous')
